--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,23 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+:root {
+  --fontColor: black;
+  --fontGrayTwo: rgb(31 41 55);
+  --themeBg: #FEFEFE;
+  --bg: #fff; 
+  --borderLine: red;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #FEFEFE;
 }
 
 a {
@@ -12,15 +26,25 @@ a {
 }
 
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
+  /* html {
     color-scheme: dark;
   }
   body {
     color: white;
     background: black;
-  }
+  } */
+}
+
+.dark-mode {
+  --bg: #1a1e35;
+  --themeBg: #0d0d0d;
+  --borderLine: red;
+  --fontColor: #FEFEFE;
+  --fontGrayTwo: rgb(75 85 99);
 }
